[gd_scene load_steps=3 format=3 uid="uid://cxuyvj03hgs8l"]

[ext_resource type="Script" path="res://Scripts/GoldPile.gd" id="1_ho6gt"]
[ext_resource type="Texture2D" uid="uid://0m8j023jbiol" path="res://Sprites/GoldPile.png" id="2_t4gbj"]

[node name="GoldPile" type="Node2D"]
visible = false
z_index = 200
script = ExtResource("1_ho6gt")

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -68.0
offset_right = 68.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_t4gbj")
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Move" type="Timer" parent="."]
wait_time = 0.9
one_shot = true
autostart = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Move" to="." method="_on_move_timeout"]
